Fix vertical spacing for first block in case that there is a change of color from default.

--- a/frontend/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
@@ -3,7 +3,18 @@
   color: var(--theme-foreground-color);
   @include color-block-change-vertical-spacing();
 
-  &:first-child {
+  // // TODO: investigate why on SSR the whitespace is removed and in client not
+  // // This is a workaround to avoid the two use cases...
+  // &[style*='--theme-color:#fff']:first-child,
+  // &[style*='--theme-color: #fff']:first-child {
+  //   padding-top: 0;
+  // }
+
+  // &:first-child:has(> .previous--has--same--backgroundColor) {
+  //   padding-top: 0;
+  // }
+
+  &:first-child:has(> :first-child.previous--has--same--backgroundColor) {
     padding-top: 0;
   }
 
